// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ensure no name clashes 1`] = `
"const native0 = $$NATIVE_STORAGE;
const callIfFuncAndRightArgs0 = native.operators.get(\\"callIfFuncAndRightArgs0\\");
const boolOrErr0 = native.operators.get(\\"boolOrErr0\\");
const wrap90 = native.operators.get(\\"wrap90\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
(( <globals redacted> ) => {
  return (() => {
    const runtime = native.globals.get(\\"runtime\\").value;
    const display = native.globals.get(\\"display\\").value;
    const raw_display = native.globals.get(\\"raw_display\\").value;
    const stringify = native.globals.get(\\"stringify\\").value;
    const error = native.globals.get(\\"error\\").value;
    const prompt = native.globals.get(\\"prompt\\").value;
    const is_number = native.globals.get(\\"is_number\\").value;
    const is_string = native.globals.get(\\"is_string\\").value;
    const is_function = native.globals.get(\\"is_function\\").value;
    const is_boolean = native.globals.get(\\"is_boolean\\").value;
    const is_undefined = native.globals.get(\\"is_undefined\\").value;
    const parse_int = native.globals.get(\\"parse_int\\").value;
    const undefined = native.globals.get(\\"undefined\\").value;
    const NaN = native.globals.get(\\"NaN\\").value;
    const Infinity = native.globals.get(\\"Infinity\\").value;
    const math_abs = native.globals.get(\\"math_abs\\").value;
    const math_acos = native.globals.get(\\"math_acos\\").value;
    const math_acosh = native.globals.get(\\"math_acosh\\").value;
    const math_asin = native.globals.get(\\"math_asin\\").value;
    const math_asinh = native.globals.get(\\"math_asinh\\").value;
    const math_atan = native.globals.get(\\"math_atan\\").value;
    const math_atanh = native.globals.get(\\"math_atanh\\").value;
    const math_atan2 = native.globals.get(\\"math_atan2\\").value;
    const math_ceil = native.globals.get(\\"math_ceil\\").value;
    const math_cbrt = native.globals.get(\\"math_cbrt\\").value;
    const math_expm1 = native.globals.get(\\"math_expm1\\").value;
    const math_clz32 = native.globals.get(\\"math_clz32\\").value;
    const math_cos = native.globals.get(\\"math_cos\\").value;
    const math_cosh = native.globals.get(\\"math_cosh\\").value;
    const math_exp = native.globals.get(\\"math_exp\\").value;
    const math_floor = native.globals.get(\\"math_floor\\").value;
    const math_fround = native.globals.get(\\"math_fround\\").value;
    const math_hypot = native.globals.get(\\"math_hypot\\").value;
    const math_imul = native.globals.get(\\"math_imul\\").value;
    const math_log = native.globals.get(\\"math_log\\").value;
    const math_log1p = native.globals.get(\\"math_log1p\\").value;
    const math_log2 = native.globals.get(\\"math_log2\\").value;
    const math_log10 = native.globals.get(\\"math_log10\\").value;
    const math_max = native.globals.get(\\"math_max\\").value;
    const math_min = native.globals.get(\\"math_min\\").value;
    const math_pow = native.globals.get(\\"math_pow\\").value;
    const math_random = native.globals.get(\\"math_random\\").value;
    const math_round = native.globals.get(\\"math_round\\").value;
    const math_sign = native.globals.get(\\"math_sign\\").value;
    const math_sin = native.globals.get(\\"math_sin\\").value;
    const math_sinh = native.globals.get(\\"math_sinh\\").value;
    const math_sqrt = native.globals.get(\\"math_sqrt\\").value;
    const math_tan = native.globals.get(\\"math_tan\\").value;
    const math_tanh = native.globals.get(\\"math_tanh\\").value;
    const math_trunc = native.globals.get(\\"math_trunc\\").value;
    const math_E = native.globals.get(\\"math_E\\").value;
    const math_LN10 = native.globals.get(\\"math_LN10\\").value;
    const math_LN2 = native.globals.get(\\"math_LN2\\").value;
    const math_LOG10E = native.globals.get(\\"math_LOG10E\\").value;
    const math_LOG2E = native.globals.get(\\"math_LOG2E\\").value;
    const math_PI = native.globals.get(\\"math_PI\\").value;
    const math_SQRT1_2 = native.globals.get(\\"math_SQRT1_2\\").value;
    const math_SQRT2 = native.globals.get(\\"math_SQRT2\\").value;
    const pair = native.globals.get(\\"pair\\").value;
    const is_pair = native.globals.get(\\"is_pair\\").value;
    const head = native.globals.get(\\"head\\").value;
    const tail = native.globals.get(\\"tail\\").value;
    const is_null = native.globals.get(\\"is_null\\").value;
    const is_list = native.globals.get(\\"is_list\\").value;
    const list = native.globals.get(\\"list\\").value;
    const length = native.globals.get(\\"length\\").value;
    const map = native.globals.get(\\"map\\").value;
    const build_list = native.globals.get(\\"build_list\\").value;
    const for_each = native.globals.get(\\"for_each\\").value;
    const list_to_string = native.globals.get(\\"list_to_string\\").value;
    const reverse = native.globals.get(\\"reverse\\").value;
    const append = native.globals.get(\\"append\\").value;
    const member = native.globals.get(\\"member\\").value;
    const remove = native.globals.get(\\"remove\\").value;
    const remove_all = native.globals.get(\\"remove_all\\").value;
    const filter = native.globals.get(\\"filter\\").value;
    const enum_list = native.globals.get(\\"enum_list\\").value;
    const list_ref = native.globals.get(\\"list_ref\\").value;
    const reduce = native.globals.get(\\"reduce\\").value;
    const equal = native.globals.get(\\"equal\\").value;
    const draw_data = native.globals.get(\\"draw_data\\").value;
    const set_head = native.globals.get(\\"set_head\\").value;
    const set_tail = native.globals.get(\\"set_tail\\").value;
    const array_length = native.globals.get(\\"array_length\\").value;
    const is_array = native.globals.get(\\"is_array\\").value;
    const parse = native.globals.get(\\"parse\\").value;
    const apply_in_underlying_javascript = native.globals.get(\\"apply_in_underlying_javascript\\").value;
    setProp(boolOrErr, 123, 1, 1, 0);
    const f = wrap90(callIfFuncAndRightArgs => {
      let wrap = 2;
      wrap0;
      wrap1;
      wrap2;
      wrap3;
      wrap4;
      wrap5;
      wrap6;
      wrap7;
      wrap8;
      wrap9;
    }, \\"function f(callIfFuncAndRightArgs) {\\\\n  let wrap = 2;\\\\n  wrap0;\\\\n  wrap1;\\\\n  wrap2;\\\\n  wrap3;\\\\n  wrap4;\\\\n  wrap5;\\\\n  wrap6;\\\\n  wrap7;\\\\n  wrap8;\\\\n  wrap9;\\\\n}\\");
    const lastStatementResult = eval(\\"native;\\");
    native.globals.set(\\"f\\", {
      kind: \\"const\\",
      value: f
    });
    return lastStatementResult;
  })();
})();
"
`;

exports[`builtins do get prepended 1`] = `
Object {
  "code": "ensure_builtins;",
  "transpiled": "const native = $$NATIVE_STORAGE;
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFuncAndRightArgs\\");
const boolOrErr = native.operators.get(\\"boolOrErr\\");
const wrap = native.operators.get(\\"wrap\\");
const unaryOp = native.operators.get(\\"unaryOp\\");
const binaryOp = native.operators.get(\\"binaryOp\\");
const throwIfTimeout = native.operators.get(\\"throwIfTimeout\\");
const setProp = native.operators.get(\\"setProp\\");
const getProp = native.operators.get(\\"getProp\\");
(( <globals redacted> ) => {
  return (() => {
    const runtime = native.globals.get(\\"runtime\\").value;
    const display = native.globals.get(\\"display\\").value;
    const raw_display = native.globals.get(\\"raw_display\\").value;
    const stringify = native.globals.get(\\"stringify\\").value;
    const error = native.globals.get(\\"error\\").value;
    const prompt = native.globals.get(\\"prompt\\").value;
    const is_number = native.globals.get(\\"is_number\\").value;
    const is_string = native.globals.get(\\"is_string\\").value;
    const is_function = native.globals.get(\\"is_function\\").value;
    const is_boolean = native.globals.get(\\"is_boolean\\").value;
    const is_undefined = native.globals.get(\\"is_undefined\\").value;
    const parse_int = native.globals.get(\\"parse_int\\").value;
    const undefined = native.globals.get(\\"undefined\\").value;
    const NaN = native.globals.get(\\"NaN\\").value;
    const Infinity = native.globals.get(\\"Infinity\\").value;
    const math_abs = native.globals.get(\\"math_abs\\").value;
    const math_acos = native.globals.get(\\"math_acos\\").value;
    const math_acosh = native.globals.get(\\"math_acosh\\").value;
    const math_asin = native.globals.get(\\"math_asin\\").value;
    const math_asinh = native.globals.get(\\"math_asinh\\").value;
    const math_atan = native.globals.get(\\"math_atan\\").value;
    const math_atanh = native.globals.get(\\"math_atanh\\").value;
    const math_atan2 = native.globals.get(\\"math_atan2\\").value;
    const math_ceil = native.globals.get(\\"math_ceil\\").value;
    const math_cbrt = native.globals.get(\\"math_cbrt\\").value;
    const math_expm1 = native.globals.get(\\"math_expm1\\").value;
    const math_clz32 = native.globals.get(\\"math_clz32\\").value;
    const math_cos = native.globals.get(\\"math_cos\\").value;
    const math_cosh = native.globals.get(\\"math_cosh\\").value;
    const math_exp = native.globals.get(\\"math_exp\\").value;
    const math_floor = native.globals.get(\\"math_floor\\").value;
    const math_fround = native.globals.get(\\"math_fround\\").value;
    const math_hypot = native.globals.get(\\"math_hypot\\").value;
    const math_imul = native.globals.get(\\"math_imul\\").value;
    const math_log = native.globals.get(\\"math_log\\").value;
    const math_log1p = native.globals.get(\\"math_log1p\\").value;
    const math_log2 = native.globals.get(\\"math_log2\\").value;
    const math_log10 = native.globals.get(\\"math_log10\\").value;
    const math_max = native.globals.get(\\"math_max\\").value;
    const math_min = native.globals.get(\\"math_min\\").value;
    const math_pow = native.globals.get(\\"math_pow\\").value;
    const math_random = native.globals.get(\\"math_random\\").value;
    const math_round = native.globals.get(\\"math_round\\").value;
    const math_sign = native.globals.get(\\"math_sign\\").value;
    const math_sin = native.globals.get(\\"math_sin\\").value;
    const math_sinh = native.globals.get(\\"math_sinh\\").value;
    const math_sqrt = native.globals.get(\\"math_sqrt\\").value;
    const math_tan = native.globals.get(\\"math_tan\\").value;
    const math_tanh = native.globals.get(\\"math_tanh\\").value;
    const math_trunc = native.globals.get(\\"math_trunc\\").value;
    const math_E = native.globals.get(\\"math_E\\").value;
    const math_LN10 = native.globals.get(\\"math_LN10\\").value;
    const math_LN2 = native.globals.get(\\"math_LN2\\").value;
    const math_LOG10E = native.globals.get(\\"math_LOG10E\\").value;
    const math_LOG2E = native.globals.get(\\"math_LOG2E\\").value;
    const math_PI = native.globals.get(\\"math_PI\\").value;
    const math_SQRT1_2 = native.globals.get(\\"math_SQRT1_2\\").value;
    const math_SQRT2 = native.globals.get(\\"math_SQRT2\\").value;
    const pair = native.globals.get(\\"pair\\").value;
    const is_pair = native.globals.get(\\"is_pair\\").value;
    const head = native.globals.get(\\"head\\").value;
    const tail = native.globals.get(\\"tail\\").value;
    const is_null = native.globals.get(\\"is_null\\").value;
    const is_list = native.globals.get(\\"is_list\\").value;
    const list = native.globals.get(\\"list\\").value;
    const length = native.globals.get(\\"length\\").value;
    const map = native.globals.get(\\"map\\").value;
    const build_list = native.globals.get(\\"build_list\\").value;
    const for_each = native.globals.get(\\"for_each\\").value;
    const list_to_string = native.globals.get(\\"list_to_string\\").value;
    const reverse = native.globals.get(\\"reverse\\").value;
    const append = native.globals.get(\\"append\\").value;
    const member = native.globals.get(\\"member\\").value;
    const remove = native.globals.get(\\"remove\\").value;
    const remove_all = native.globals.get(\\"remove_all\\").value;
    const filter = native.globals.get(\\"filter\\").value;
    const enum_list = native.globals.get(\\"enum_list\\").value;
    const list_ref = native.globals.get(\\"list_ref\\").value;
    const reduce = native.globals.get(\\"reduce\\").value;
    const equal = native.globals.get(\\"equal\\").value;
    const draw_data = native.globals.get(\\"draw_data\\").value;
    const set_head = native.globals.get(\\"set_head\\").value;
    const set_tail = native.globals.get(\\"set_tail\\").value;
    const array_length = native.globals.get(\\"array_length\\").value;
    const is_array = native.globals.get(\\"is_array\\").value;
    const parse = native.globals.get(\\"parse\\").value;
    const apply_in_underlying_javascript = native.globals.get(\\"apply_in_underlying_javascript\\").value;
    const lastStatementResult = eval(\\"ensure_builtins;\\");
    return lastStatementResult;
  })();
})();
",
}
`;
